--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <title>login me</title>
-   
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <div class="login-box">
